# treesitter-queries

./: Cargo.toml  lock.yaml
queries/: yaml.scm
src/: build.rs  main.rs
