[package]
name = "treesitter-queries"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }
anyhow = "1.0"
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter.git" }

[build-dependencies]
cc = "1.0"
